fixed alignfull grid background margins

--- a/src/gutenberg/blocks/grid/style.scss
+++ b/src/gutenberg/blocks/grid/style.scss
@@ -205,6 +205,7 @@
         left: 7.5px;
     }
 
+    &.alignfull > .nk-awb,
     > .nk-awb.alignfull {
         right: 0;
         left: 0;
